<resources>
    // Start screen strings
    <string name="app_name">InfinyQuiz</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="login">Log in</string>
    <string name="createAcc">Create account</string>

    // Login screen strings
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    // Home screen strings
    <string name="settings">Settings</string>
    <string name="playNow">Play Now</string>
    <string name="customMatch">Custom Match</string>
    <string name="createQuestion">Create Questions</string>
    <string name="rateQuestion">Rate Questions</string>

    // Settings strings
    <string name="musicVolume">Music Volume</string>
    <string name="fxVolume">FX Volume</string>
    <string name="publicProfile">Set public profile information</string>

    // Category strings
    <string name="cat1">History</string>
    <string name="cat2">Science</string>
    <string name="cat3">Music</string>

    // String array for categories:
    <string-array name="categories">
        <item>@string/cat1</item>
        <item>@string/cat2</item>
        <item>@string/cat3</item>
    </string-array>
    <string name="title_activity_account">AccountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>