<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageButton
        android:id="@+id/profileBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circlebutton"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="16dp"
        tools:srcCompat="@drawable/googleg_standard_color_18" />

    <TextView
        android:id="@+id/homeAppnameView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/harlowsoliditalic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="86dp" />

    <Button
        android:id="@+id/randomMatchBtn"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/lightBlueBtn"
        android:fontFamily="@font/buttonfont"
        android:text="@string/playNow"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="281dp" />

    <ImageView
        android:id="@+id/homeLogo"
        android:layout_width="238dp"
        android:layout_height="102dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="156dp" />

    <Button
        android:id="@+id/customMatchBtn"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/lightBlueBtn"
        android:fontFamily="@font/buttonfont"
        android:text="@string/customMatch"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="360dp" />

    <Button
        android:id="@+id/createQuestionBtn"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/lightBlueBtn"
        android:fontFamily="@font/buttonfont"
        android:text="@string/createQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="433dp" />

    <Button
        android:id="@+id/rateQuestionBtn"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/lightBlueBtn"
        android:fontFamily="@font/buttonfont"
        android:text="@string/rateQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="507dp" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellowBtn"
        android:fontFamily="@font/buttonfont"
        android:scaleType="fitXY"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/settings_icon"
        app:iconTint="@color/black"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="609dp" />
</androidx.constraintlayout.widget.ConstraintLayout>